tests/ui/g-roleprogram-witness-mismatch.stderr
error[E0451]: field `image` of struct `RoleProgram` is private
 --> tests/ui/g-roleprogram-witness-mismatch.rs:7:9
  |
6 |     core::hint::black_box(RoleProgram::<0> {
  |                           ---------------- in this type
7 |         image: unreachable!(),
  |         ^^^^^ private field

error: type `hibana::global::role_program::RoleImageRef` is private
 --> tests/ui/g-roleprogram-witness-mismatch.rs:7:16
  |
7 |         image: unreachable!(),
  |                ^^^^^^^^^^^^^^ private type
